experimental/ir/testdata/imports/option.proto.yaml.stderr.txt
error: `Foo` is only imported for use in options
  --> main.proto:8:3
   |
 4 | import option "option.proto";
   | ----------------------------- imported as `option` here
...
 7 |   option (e).x = 1;
 8 |   Foo y = 2;
   |   ^^^ requires non-`option` import
   |
  help: delete `option`
   |
 4 | - import option "option.proto";
 4 | + import "option.proto";
   |

encountered 1 error
